Fix misaligned padding

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     background-color: rgb(63, 63, 63);
     background-color: var(--bg-dark);
     padding: 0;
-    padding-top: 5.9rem;
+    padding-top: 5.5rem;
     margin: 0;
     box-sizing: border-box;
 }
